test-crates/duchess-java-tests/tests/ui/interface_class_mismatch_reflected.rs
duchess::java_package! {
    package exceptions;

    public interface DifferentException { * } //~ ERROR: error in class
}

fn main() {}
